--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "svelte-blockly",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"description": "Blockly Wrapper for Svelte",
 	"keywords": [
 		"svelte",
@@ -22,7 +22,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"peerDependencies": {
-		"blockly": "^5.20210325.0"
+		"blockly": "^9.2.1"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.21",
